@@ -35,6 +35,7 @@
     BI:
     * FIX: make rotating folding arrows black (white was not visible)
     * Display format 'boxes' now in all BI views available
+    * Display format 'boxes' now persists folding state
 
 1.2.0b3:
     Core:
